# WebberProtocol

./: .gitignore  Anchor.toml  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/plans/: 2026-03-09-marketplace-design.md  2026-03-09-marketplace-implementation.md  2026-03-09-reputation-engine-design.md  2026-03-09-reputation-engine-implementation.md
programs/webber-marketplace/: Cargo.toml
programs/webber-marketplace/src/: lib.rs
programs/webber-registry/: Cargo.toml
programs/webber-registry/src/: lib.rs
programs/webber-reputation/: Cargo.toml
programs/webber-reputation/src/: lib.rs  webber_reputation-keypair.json
programs/webber-token/: Cargo.toml
programs/webber-token/src/: lib.rs
scripts/: demo-payment.ts
tasks/: lessons.md  todo.md
tests/: demo-payment.ts  webber-marketplace.ts  webber-protocol.ts  webber-registry.ts  webber-reputation.ts  webber-token.ts
