[package]
name = "webber-marketplace"
version = "0.1.0"
description = "Webber Protocol Capability Marketplace — service listings and atomic payments"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "webber_marketplace"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token"] }
webber-token = { path = "../webber-token", features = ["cpi"] }
webber-registry = { path = "../webber-registry", features = ["cpi"] }
webber-reputation = { path = "../webber-reputation", features = ["cpi"] }
