[package]
name = "webber-registry"
version = "0.1.0"
description = "Webber Protocol Agent Registry — registration, staking, and capability management"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "webber_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token"] }
