[package]
name = "webber-reputation"
version = "0.1.0"
description = "Webber Protocol Reputation Engine — trust scores from real economic activity"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "webber_reputation"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token"] }
webber-registry = { path = "../webber-registry", features = ["cpi"] }
